--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "mode": "remote",
             "remotePath": "/app",
             "port": 2345,
-            "host": "127.0.0.1"
+            "host": "localhost"
         }
     ]
 }
