update the debugger path

--- a/okteto.yaml
+++ b/okteto.yaml
@@ -12,7 +12,7 @@ dev:
     image: okteto/golang:1
     command: bash
     sync:
-      - .:/usr/src/app
+      - .:/app
     volumes:
       - /go
       - /root/.cache
